# gRPC_demo

UA_BlackJack_Server/: README.md  player.proto  spdlog使用说明.md  客户端命令描述.md  数据库接口描述.md
UA_BlackJack_Server/DBServer/: CMakeLists.txt  DBService.cc  DataBaseDesign.md  Database.cc  Database.h  Player.grpc.pb.cc  Player.grpc.pb.h  Player.pb.cc  Player.pb.h  RedisService.cc  RedisService.h  nameFormat.cc  nameFormat.h
UA_BlackJack_Server/DBServer/test/: test_Database.cc  test_RedisService.cc  test_nameFormat.cc
UA_BlackJack_Server/gRPC_demo/: CMakeLists.txt  Lobby.cpp  Lobby.h  Players.cpp  Players.h  README.md  Room.cpp  Room.h  client-asyn.cc  client-syn.cc  demo.proto  lobby.proto  no_proxy_add.py  server-asyn.cc  server-syn.cc  test  test.cpp  testspdlog  testspdlog.cpp
UA_BlackJack_Server/gRPC_demo/Logs/: Lobby_log.txt
examples/cpp/helloworld/: greeter_client.cc  greeter_server.cc
examples/cpp/route_guide/: route_guide_client.cc  route_guide_server.cc
examples/protos/: helloworld.proto  route_guide.proto
